--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,5 +1,5 @@
 # Stage-1 : buiild stage
-FROM maven:3.9.4-eclipse-temurin-17 AS buiild
+FROM maven:3.9.4-eclipse-temurin-17 AS build
 
 WORKDIR /app
 
