--- a/microservice-ui/Dockerfile
+++ b/microservice-ui/Dockerfile
@@ -2,12 +2,12 @@
 FROM node:18 AS build
 WORKDIR /app
 COPY package.json .
-RUN npm run install --production
+RUN npm  install --production
 COPY . .
-RUN npm run build
+RUN npm build
 
 # Stage 2 : Server with nginx
 FROM nginx:stable-alpine AS production
 COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
+EXPOSE 3000
 
